# Game-Boy-emulator

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: apu.c.3AC5BB7759E76263.idx  apu.h.70FC4A82794BD434.idx  bus.c.71E583765D623430.idx  bus.h.A4D8665716ED9B2D.idx  cart.c.D42FE58AB89FDD4B.idx  cart.h.84977607FB6D3BD6.idx  check_gbe.c.32DE9A38686A38EE.idx  common.h.1E6B0D5537807BDC.idx  cpu.c.02B4D78DEA97C388.idx  cpu.h.602B2277A31B9A99.idx  cpu_fetch.c.E86FB8AF85076221.idx  cpu_proc.c.8086CCC330A21577.idx  cpu_util.c.E1C1EACD1E658429.idx  dbg.c.621D6FA07AD8CD71.idx  dbg.h.945B51FFC0B6C47E.idx  dma.c.B93A5D1E6E63975C.idx  dma.h.2F06743237662B36.idx  emu.c.B56DB794880DAD27.idx  emu.h.A18867F3137B2381.idx  gamepad.c.DD550138A39FDB66.idx  gamepad.h.502456C69C1FEB63.idx  instructions.c.DDCD83824E07FCCD.idx  instructions.h.6D30C2B6998B1959.idx  interrupts.c.442EA0B47AAD55CF.idx  interrupts.h.493E754FB46524C0.idx  io.c.FC2CB2C4F5B7B94A.idx  io.h.572BD134534DF85F.idx  lcd.c.6A69D8F60CF7D7C9.idx  lcd.h.E7CBCFAA1AD69305.idx  main.c.4457C6A4610241E4.idx  ppu.c.C5F74FC8B1608FB8.idx  ppu.h.75DB8E718522D249.idx  ppu_pipeline.c.A0A1651C1877AB1F.idx  ppu_pipeline.h.0A6C6ECB3735BA77.idx  ppu_sm.c.BABE92D9FD2CC618.idx  ppu_sm.h.993C80D663608081.idx  ram.c.E8FA687209FFD154.idx  ram.h.F463BBDE2AF4AEA7.idx  stack.c.CC4DFC6F5D19A5BB.idx  stack.h.5FCCBA04F32CB280.idx  (+4 more)
gbemu/: CMakeLists.txt  Makefile  cmake_install.cmake  gbemu  libSDL2_ttf.dylib
include/: apu.h  bus.h  cart.h  common.h  cpu.h  dma.h  emu.h  gamepad.h  lcd.h  ppu.h  ppu_pipeline.h  ram.h  timer.h  ui.h
lib/: CMakeLists.txt  Makefile  apu.c  bus.c  cart.c  cmake_install.cmake  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  dbg.c  dma.c  emu.c  gamepad.c  instructions.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_pipeline.c  ppu_sm.c  ram.c  ui.c
tests/: Makefile  check_gbe  cmake_install.cmake
